--- a/server/smart_irrigation/app/templates/index.html
+++ b/server/smart_irrigation/app/templates/index.html
@@ -76,16 +76,25 @@
     <script 
     src='{% static "angular-ui-router/release/angular-ui-router.min.js" %}'>
     </script>
+    <script 
+    src='{% static "angular-resource/angular-resource.min.js" %}'>
+    </script>
 
     <!-- App -->
     <script 
     src='{% static "scripts/app.js" %}'>
+    </script>
+    <script 
+    src='{% static "scripts/resources.js" %}'>
     </script>
 
     <!-- Controllers -->
     <script 
     src='{% static "scripts/controllers/base.js" %}'>
     </script>    
+    <script 
+    src='{% static "scripts/controllers/home.js" %}'>
+    </script>
 
   </body>
 </html>
