--- a/server/smart_irrigation/app/templates/index.html
+++ b/server/smart_irrigation/app/templates/index.html
@@ -29,27 +29,8 @@
 
   <body>
 
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            Smart-irrigation
-          </a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+    <div navbar></div>
+   
     <div class="container" ui-view>
 
     </div> <!-- /container -->
@@ -87,6 +68,9 @@
     <script 
     src='{% static "scripts/resources.js" %}'>
     </script>
+    <script 
+    src='{% static "scripts/directives.js" %}'>
+    </script>
 
     <!-- Controllers -->
     <script 
@@ -94,6 +78,9 @@
     </script>    
     <script 
     src='{% static "scripts/controllers/home.js" %}'>
+    </script>
+    <script 
+    src='{% static "scripts/controllers/config.js" %}'>
     </script>
 
   </body>
