Added user authentication

--- a/server/smart_irrigation/app/static/views/partials/navbar.html
+++ b/server/smart_irrigation/app/static/views/partials/navbar.html
@@ -29,6 +29,10 @@ role="navigation">
             </a>
         </li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="/app/logout">Logout</a>
+        </li>
     </div><!--/.nav-collapse -->
   </div>
 </nav>
