--- a/server/smart_irrigation/app/templates/index.html
+++ b/server/smart_irrigation/app/templates/index.html
@@ -81,6 +81,9 @@
     <script 
     src='{% static "scripts/controllers/config.js" %}'>
     </script>
+    <script 
+    src='{% static "scripts/controllers/plants.js" %}'>
+    </script>
 
   </body>
 </html>
