--- a/server/smart_irrigation/app/templates/index.html
+++ b/server/smart_irrigation/app/templates/index.html
@@ -84,6 +84,15 @@
     <script 
     src='{% static "scripts/controllers/plants.js" %}'>
     </script>
+    <script 
+    src='{% static "scripts/controllers/create-config.js" %}'>
+    </script>
+    <script 
+    src='{% static "scripts/controllers/edit-config.js" %}'>
+    </script>
+    <script 
+    src='{% static "scripts/controllers/sync.js" %}'>
+    </script>
 
   </body>
 </html>
