--- a/server/smart_irrigation/app/templates/index.html
+++ b/server/smart_irrigation/app/templates/index.html
@@ -93,6 +93,9 @@
     <script 
     src='{% static "scripts/controllers/sync.js" %}'>
     </script>
+    <script 
+    src='{% static "scripts/controllers/store.js" %}'>
+    </script>
 
   </body>
 </html>
