--- a/server/smart_irrigation/app/static/views/partials/navbar.html
+++ b/server/smart_irrigation/app/static/views/partials/navbar.html
@@ -1,6 +1,8 @@
 <!-- Fixed navbar -->
 <nav class="navbar navbar-default navbar-fixed-top" 
-role="navigation">
+role="navigation"
+ng-controller="BaseCtrl"
+ng-init="initUser()">
   <div class="container">
     <div class="navbar-header">
       <button type="button" 
@@ -37,7 +39,9 @@ role="navigation">
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>{{user.username}}</li>
+        <li>
+          <a href="">{{user.username}}</a>
+        </li>
         <li>
           <a href="/app/logout">Logout</a>
         </li>
