--- a/server/smart_irrigation/app/static/views/plants.html
+++ b/server/smart_irrigation/app/static/views/plants.html
@@ -5,7 +5,7 @@
 	</a>
 </div>
 
-<div class="row">
+<div class="row" ng-if="plants.length > 0">
 	<table class="table table-striped">
 	  <thead>
 	  	<tr>
