Created simulation interface and updated requirements file

--- a/server/smart_irrigation/app/templates/index.html
+++ b/server/smart_irrigation/app/templates/index.html
@@ -96,6 +96,9 @@
     <script 
     src='{% static "scripts/controllers/store.js" %}'>
     </script>
+    <script 
+    src='{% static "scripts/controllers/simul.js" %}'>
+    </script>
 
   </body>
 </html>
