--- a/server/smart_irrigation/app/static/views/simul.html
+++ b/server/smart_irrigation/app/static/views/simul.html
@@ -24,7 +24,7 @@
 		</div>
 		<button class="btn btn-default" 
 		ng-click="setHumidity(humidityForm.$valid, simul)">
-			Set temperature
+			Set humidity
 		</button>
 	</form>
 </div>
