--- a/server/smart_irrigation/app/static/views/plants.html
+++ b/server/smart_irrigation/app/static/views/plants.html
@@ -20,6 +20,9 @@
 	  			<a ui-sref="plant({id: plant.id})">
 	  				{{plant.name}}
 	  			</a>
+	  			<span ng-if="plant.synced">
+	  				[Synced]
+	  			</span>
 	  		</td>
 	  		<td>
 	  			{{plant.creator}}
@@ -29,8 +32,7 @@
 	  				<span class="glyphicon glyphicon-trash">
 	  				</span>
 	  			</a>
-	  			<a ui-sref="sync({id:plant.id})"
-	  			ng-if="!plant.synced">
+	  			<a ui-sref="sync({id:plant.id})">
 	  				<span 
 	  				class="glyphicon glyphicon-refresh">
 	  				</span>
